--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,10 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
+
     steps:
     - name: Checkout
       uses: actions/checkout@v3
@@ -26,9 +30,6 @@ jobs:
           --document-name "AWS-RunShellScript" \
           --comment "Deploying app via SSM" \
           --parameters 'commands=[
-            "cd ${{ secrets.APP_DIR }}",
-            "git pull origin main",
-            "npm install",
-            "pm2 restart app || pm2 start app.js --name app"
+            "sudo -u ubuntu bash -c '\''cd /home/ubuntu/myapp && git pull origin main && npm install && pm2 restart app || pm2 start app.js --name app'\''"
           ]' \
           --output text
