--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,8 +30,7 @@ jobs:
           --document-name "AWS-RunShellScript" \
           --comment "Deploying app via SSM" \
           --parameters 'commands=[
-            "sudo chown -R ubuntu:ubuntu /home/ubuntu/sermon_summary",
-            "sudo -u ubuntu bash -lc '\''cd /home/ubuntu/sermon_summary && git pull origin main && npm install && pm2 restart app || pm2 start index.js --name app'\''"
+            "sudo -u ubuntu bash -lc \"cd /home/ubuntu/sermon_summary && git pull origin main\""
           ]' \
           --output text
 
